--- a/yelp_general_eda.ipynb
+++ b/yelp_general_eda.ipynb
@@ -26,7 +26,8 @@
     "\n",
     "\n",
     "Provenance: https://www.kaggle.com/yelp-dataset/yelp-dataset\n",
-    "Link to Original Dataset: https://www.yelp.com/dataset"
+    "Link to Original Dataset: https://www.yelp.com/dataset\n",
+    "References: \"Presonalizing Yelp Review Ratings\" "
    ]
   },
   {
