created reviews data dictionary

--- a/yelp_general_eda.ipynb
+++ b/yelp_general_eda.ipynb
@@ -34,10 +34,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# EDA Guide "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Dictionary \n",
     "\n",
     "## Reviews\n",
+    "Contains full review text data including the user_id that wrote the review and the business_id the review is written for.\n",
+    "     \n",
+    "- **review_id**:  unique review id\n",
+    "    - Data Type: string, 22 character (ex: \"zdSx_SD6obEhz9VrW9uAWA\")\n",
     "\n",
+    "\n",
+    "- **user_id**: unique user id, maps to the user in user.csv\n",
+    "    - Data type: string, 22 character (ex: \"Ha3iJu77CxlrFm-vQRs_8g\")\n",
+    "    \n",
+    "\n",
+    "- **business_id**: business id, maps to business in business.csv \n",
+    "    - Data Type: string, 22 character (ex:\"tnhfDv5Il8EaGSXZGiuQGg\")\n",
+    "    \n",
+    "    \n",
+    "- **stars**: star rating by reviewer, maxium of 5 \n",
+    "    - Data Type*: Integer\n",
+    "    \n",
+    "    \n",
+    "- **date**: date formatted YYYY-MM-DD\n",
+    "    - Data Type: String (ex: \"2016-03-09\")\n",
+    "    \n",
+    "    \n",
+    "- **text**: the review itself\n",
+    "    - Data Type: Sting\n",
+    "    - Example: *\"Great place to hang out after work: the prices are decent, and the ambience is fun. It's a bit loud, but very lively. The staff is friendly, and the food is good. They have a good selection of drinks.\"*\n",
+    "\n",
+    "- **useful**: number of useful votes  received \n",
+    "    - Data Type: Integer \n",
+    "    \n",
+    "    \n",
+    "- **funny**: number of funny votes  received \n",
+    "    - Data Type: Integer \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "- **cool**: number of cool votes  received \n",
+    "    - Data Type: Integer \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "- **useful**: number of useful votes  received \n",
+    "    - Data Type: Integer \n",
+    "    \n",
+    "    \n",
     "\n",
     "## Business\n",
     "\n",
@@ -60,11 +110,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To do: \n",
+    "- Visualize the distribution of of star ratings in reviews, useful, cool, \n",
+    "- Going to need to subsection the data because cannot to all for everything. Pick a market.\n",
+    "- Articulate a business goal"
+   ]
   },
   {
    "cell_type": "code",
