--- a/yelp_reviews_eda.ipynb
+++ b/yelp_reviews_eda.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "# Overview \n",
-    "The goal of this notebook is to do extensive EDA on the Yelp review dataset specifically. Here, I will be getting a feel for the data, see what cleaning needs to be done, and get some general inferential statistics. "
+    "The goal of this notebook is to do extensive EDA on the Yelp review dataset specifically. Here, I will be getting a feel for the data, see what cleaning needs to be done, and get some general inferential statistics. Trying this."
    ]
   },
   {
