--- a/eda_notebooks/network_analysis.ipynb
+++ b/eda_notebooks/network_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./yelp_user.csv')"
+    "data = pd.read_csv('~/capstone_project/data/yelp_user.csv')"
    ]
   },
   {
@@ -2542,7 +2542,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2556,7 +2556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
