--- a/eda_notebooks/yelp_general_eda.ipynb
+++ b/eda_notebooks/yelp_general_eda.ipynb
@@ -166,69 +166,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -254,13 +191,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Loading in the other datasets\n",
-    "# business = pd.read_csv('yelp_business.csv')\n",
-    "# attributes = pd.read_csv('yelp_business_attributes.csv')\n",
-    "# business_hours= pd.read_csv('yelp_business_hours.csv')\n",
-    "# checkin = pd.read_csv('yelp_checkin.csv')\n",
-    "# tip = pd.read_csv('yelp_tip.csv')\n",
-    "# user = pd.read_csv('yelp_user.csv')"
+    "# Loading in the other datasets\n",
+    "business = pd.read_csv('yelp_business.csv')\n",
+    "attributes = pd.read_csv('yelp_business_attributes.csv')\n",
+    "business_hours= pd.read_csv('yelp_business_hours.csv')\n",
+    "checkin = pd.read_csv('yelp_checkin.csv')\n",
+    "tip = pd.read_csv('yelp_tip.csv')\n",
+    "user = pd.read_csv('yelp_user.csv')"
    ]
   },
   {
@@ -1582,7 +1519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1596,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
