--- a/eda_notebooks/yelp_reviews_eda.ipynb
+++ b/eda_notebooks/yelp_reviews_eda.ipynb
@@ -1194,7 +1194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1208,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
