some updates after Dave and Tom meetings

--- a/eda_notebooks/rec_food_reviews_sc.ipynb
+++ b/eda_notebooks/rec_food_reviews_sc.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6808, 21)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1466,6 +1488,18 @@
    "source": [
     "distance_df = pd.DataFrame(distances, index=pivot.columns, columns=pivot.columns)\n",
     "distance_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# buiild recommender on train, holding out other reviews users have rated 5 stars, \n",
+    "# predict how many stars a user, 5 class output, NN, sigmoid on output, cap at 5 stars, careful\n",
+    "# as does introduce some error. \n",
+    "# or turn it into a two class problem "
    ]
   },
   {
