updating clean notebooks

--- a/eda_notebooks/rec_food_reviews_sc.ipynb
+++ b/eda_notebooks/rec_food_reviews_sc.ipynb
@@ -693,7 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# need an index of all users, and single column for every movie \n",
+    "# need an index of all users, and single column for every restaurant \n",
     "pivot = pd.pivot_table(ratings, index='user_id', columns='name', values='stars')"
    ]
   },
