scaling and more modeling

--- a/data/food_and_reviews_join.ipynb
+++ b/data/food_and_reviews_join.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "food = pd.read_csv(\"business_food\")"
+    "food = pd.read_csv(\"/home/schubert/DSI/capstone_project/eda_notebooks/business_food\")"
    ]
   },
   {
@@ -637,7 +637,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_reviews_nv = food_reviews[food_reviews[\"state\"].str.contains(\"NV\", na=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_reviews_il = food_reviews[food_reviews[\"state\"].str.contains(\"IL\", na=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_reviews_pa = food_reviews[food_reviews[\"state\"].str.contains(\"PA\", na=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -708,118 +735,118 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>-6e0liTvH5EoB4HuncuQgA</th>\n",
-       "      <td>TgDVK5GGEVWqIQB1klOwOQ</td>\n",
-       "      <td>Ow07iTOW_JUer07MWNhazg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2017-09-02</td>\n",
-       "      <td>My husband and I happened to drive by BIG FOOD...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>\"Small Bar Fort Mill\"</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\"3415 Hwy 51 N\"</td>\n",
-       "      <td>Fort Mill</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>29715</td>\n",
-       "      <td>35.086572</td>\n",
-       "      <td>-80.931214</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Restaurants;Bars;Pubs;Sports Bars;Nightlife</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-6e0liTvH5EoB4HuncuQgA</th>\n",
-       "      <td>WsnsRDe7Ywl5FC7bALCBMA</td>\n",
-       "      <td>nFS3GfDeOOzg-bXKuNNHsA</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2017-08-01</td>\n",
-       "      <td>First time great food and service will be goin...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>\"Small Bar Fort Mill\"</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\"3415 Hwy 51 N\"</td>\n",
-       "      <td>Fort Mill</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>29715</td>\n",
-       "      <td>35.086572</td>\n",
-       "      <td>-80.931214</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Restaurants;Bars;Pubs;Sports Bars;Nightlife</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-6e0liTvH5EoB4HuncuQgA</th>\n",
-       "      <td>8gkZ2V9YzsM9A3r6Lj9zrQ</td>\n",
-       "      <td>M3ncFIlEfaSdSpoiMINwBA</td>\n",
+       "      <th>--GM_ORV2cYS-h38DSaCLw</th>\n",
+       "      <td>q6zDnAyfyzEhpFZYU8huPA</td>\n",
+       "      <td>2Z8czZ9VpUAy3bd1tRz3HA</td>\n",
        "      <td>4</td>\n",
-       "      <td>2017-06-21</td>\n",
-       "      <td>It's a bar. It's small. It's Small Bar! It's c...</td>\n",
+       "      <td>2016-01-16</td>\n",
+       "      <td>Very good quality pizzas. The prices are great...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>\"Small Bar Fort Mill\"</td>\n",
+       "      <td>\"Mm Mm Pizza\"</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>\"3415 Hwy 51 N\"</td>\n",
-       "      <td>Fort Mill</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>29715</td>\n",
-       "      <td>35.086572</td>\n",
-       "      <td>-80.931214</td>\n",
+       "      <td>\"407 S Central Ave\"</td>\n",
+       "      <td>Canonsburg</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15317</td>\n",
+       "      <td>40.252569</td>\n",
+       "      <td>-80.183859</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Restaurants;Bars;Pubs;Sports Bars;Nightlife</td>\n",
+       "      <td>Pizza;Chicken Wings;Salad;Restaurants</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-6e0liTvH5EoB4HuncuQgA</th>\n",
-       "      <td>UyD3TRVYYMCynpkBuR9CcQ</td>\n",
-       "      <td>T81BRLNvCpRkgVtYyabImQ</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2017-09-12</td>\n",
-       "      <td>Great little bar in Fort Mill. We went for lun...</td>\n",
+       "      <th>--GM_ORV2cYS-h38DSaCLw</th>\n",
+       "      <td>fHr9YK4-LDyD2kGduRjmrw</td>\n",
+       "      <td>KUFOLW5C83qpr5zWoIIThQ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-31</td>\n",
+       "      <td>They told me they were delivering me pizza, th...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>\"Small Bar Fort Mill\"</td>\n",
+       "      <td>\"Mm Mm Pizza\"</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>\"3415 Hwy 51 N\"</td>\n",
-       "      <td>Fort Mill</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>29715</td>\n",
-       "      <td>35.086572</td>\n",
-       "      <td>-80.931214</td>\n",
+       "      <td>\"407 S Central Ave\"</td>\n",
+       "      <td>Canonsburg</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15317</td>\n",
+       "      <td>40.252569</td>\n",
+       "      <td>-80.183859</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Restaurants;Bars;Pubs;Sports Bars;Nightlife</td>\n",
+       "      <td>Pizza;Chicken Wings;Salad;Restaurants</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-6e0liTvH5EoB4HuncuQgA</th>\n",
-       "      <td>eAsxdJilerKbjmVd2FkDVQ</td>\n",
-       "      <td>QKm7NuvVMmvWHKmW7blABg</td>\n",
+       "      <th>--GM_ORV2cYS-h38DSaCLw</th>\n",
+       "      <td>Z2vhgOHG7N0R_fuahMd2AQ</td>\n",
+       "      <td>jRiHm_X0on2Zex22Ke6xOg</td>\n",
        "      <td>5</td>\n",
-       "      <td>2017-06-22</td>\n",
-       "      <td>Small Bar is great!  Super cold beer and the p...</td>\n",
+       "      <td>2016-12-13</td>\n",
+       "      <td>I eat here quite often,  the high quality food...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"Mm Mm Pizza\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\"407 S Central Ave\"</td>\n",
+       "      <td>Canonsburg</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15317</td>\n",
+       "      <td>40.252569</td>\n",
+       "      <td>-80.183859</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Pizza;Chicken Wings;Salad;Restaurants</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>--GM_ORV2cYS-h38DSaCLw</th>\n",
+       "      <td>grm_MOzOKIw-icfJXv0-KQ</td>\n",
+       "      <td>ZjHDoLXzLcj023N1a7WTww</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2017-01-16</td>\n",
+       "      <td>Ordered several pizzas for a work party..chees...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>\"Small Bar Fort Mill\"</td>\n",
+       "      <td>\"Mm Mm Pizza\"</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>\"3415 Hwy 51 N\"</td>\n",
-       "      <td>Fort Mill</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>29715</td>\n",
-       "      <td>35.086572</td>\n",
-       "      <td>-80.931214</td>\n",
+       "      <td>\"407 S Central Ave\"</td>\n",
+       "      <td>Canonsburg</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15317</td>\n",
+       "      <td>40.252569</td>\n",
+       "      <td>-80.183859</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Restaurants;Bars;Pubs;Sports Bars;Nightlife</td>\n",
+       "      <td>Pizza;Chicken Wings;Salad;Restaurants</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>--GM_ORV2cYS-h38DSaCLw</th>\n",
+       "      <td>YGEBymy_9OgZ7_a7Ee0NEA</td>\n",
+       "      <td>WZVeGwzAEhcnVAZ5ub8j6w</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2013-04-13</td>\n",
+       "      <td>We have had  many take-out pizzas from here, a...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"Mm Mm Pizza\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\"407 S Central Ave\"</td>\n",
+       "      <td>Canonsburg</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15317</td>\n",
+       "      <td>40.252569</td>\n",
+       "      <td>-80.183859</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Pizza;Chicken Wings;Salad;Restaurants</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -829,85 +856,84 @@
       "text/plain": [
        "                                     review_id                 user_id  stars  \\\n",
        "business_id                                                                     \n",
-       "-6e0liTvH5EoB4HuncuQgA  TgDVK5GGEVWqIQB1klOwOQ  Ow07iTOW_JUer07MWNhazg      5   \n",
-       "-6e0liTvH5EoB4HuncuQgA  WsnsRDe7Ywl5FC7bALCBMA  nFS3GfDeOOzg-bXKuNNHsA      5   \n",
-       "-6e0liTvH5EoB4HuncuQgA  8gkZ2V9YzsM9A3r6Lj9zrQ  M3ncFIlEfaSdSpoiMINwBA      4   \n",
-       "-6e0liTvH5EoB4HuncuQgA  UyD3TRVYYMCynpkBuR9CcQ  T81BRLNvCpRkgVtYyabImQ      4   \n",
-       "-6e0liTvH5EoB4HuncuQgA  eAsxdJilerKbjmVd2FkDVQ  QKm7NuvVMmvWHKmW7blABg      5   \n",
+       "--GM_ORV2cYS-h38DSaCLw  q6zDnAyfyzEhpFZYU8huPA  2Z8czZ9VpUAy3bd1tRz3HA      4   \n",
+       "--GM_ORV2cYS-h38DSaCLw  fHr9YK4-LDyD2kGduRjmrw  KUFOLW5C83qpr5zWoIIThQ      1   \n",
+       "--GM_ORV2cYS-h38DSaCLw  Z2vhgOHG7N0R_fuahMd2AQ  jRiHm_X0on2Zex22Ke6xOg      5   \n",
+       "--GM_ORV2cYS-h38DSaCLw  grm_MOzOKIw-icfJXv0-KQ  ZjHDoLXzLcj023N1a7WTww      4   \n",
+       "--GM_ORV2cYS-h38DSaCLw  YGEBymy_9OgZ7_a7Ee0NEA  WZVeGwzAEhcnVAZ5ub8j6w      5   \n",
        "\n",
        "                              date  \\\n",
        "business_id                          \n",
-       "-6e0liTvH5EoB4HuncuQgA  2017-09-02   \n",
-       "-6e0liTvH5EoB4HuncuQgA  2017-08-01   \n",
-       "-6e0liTvH5EoB4HuncuQgA  2017-06-21   \n",
-       "-6e0liTvH5EoB4HuncuQgA  2017-09-12   \n",
-       "-6e0liTvH5EoB4HuncuQgA  2017-06-22   \n",
+       "--GM_ORV2cYS-h38DSaCLw  2016-01-16   \n",
+       "--GM_ORV2cYS-h38DSaCLw  2015-01-31   \n",
+       "--GM_ORV2cYS-h38DSaCLw  2016-12-13   \n",
+       "--GM_ORV2cYS-h38DSaCLw  2017-01-16   \n",
+       "--GM_ORV2cYS-h38DSaCLw  2013-04-13   \n",
        "\n",
        "                                                                     text  \\\n",
        "business_id                                                                 \n",
-       "-6e0liTvH5EoB4HuncuQgA  My husband and I happened to drive by BIG FOOD...   \n",
-       "-6e0liTvH5EoB4HuncuQgA  First time great food and service will be goin...   \n",
-       "-6e0liTvH5EoB4HuncuQgA  It's a bar. It's small. It's Small Bar! It's c...   \n",
-       "-6e0liTvH5EoB4HuncuQgA  Great little bar in Fort Mill. We went for lun...   \n",
-       "-6e0liTvH5EoB4HuncuQgA  Small Bar is great!  Super cold beer and the p...   \n",
+       "--GM_ORV2cYS-h38DSaCLw  Very good quality pizzas. The prices are great...   \n",
+       "--GM_ORV2cYS-h38DSaCLw  They told me they were delivering me pizza, th...   \n",
+       "--GM_ORV2cYS-h38DSaCLw  I eat here quite often,  the high quality food...   \n",
+       "--GM_ORV2cYS-h38DSaCLw  Ordered several pizzas for a work party..chees...   \n",
+       "--GM_ORV2cYS-h38DSaCLw  We have had  many take-out pizzas from here, a...   \n",
        "\n",
-       "                        useful  funny  cool                   name  \\\n",
-       "business_id                                                          \n",
-       "-6e0liTvH5EoB4HuncuQgA       0      0     0  \"Small Bar Fort Mill\"   \n",
-       "-6e0liTvH5EoB4HuncuQgA       0      0     0  \"Small Bar Fort Mill\"   \n",
-       "-6e0liTvH5EoB4HuncuQgA       1      1     1  \"Small Bar Fort Mill\"   \n",
-       "-6e0liTvH5EoB4HuncuQgA       0      0     0  \"Small Bar Fort Mill\"   \n",
-       "-6e0liTvH5EoB4HuncuQgA       0      0     1  \"Small Bar Fort Mill\"   \n",
+       "                        useful  funny  cool           name neighborhood  \\\n",
+       "business_id                                                               \n",
+       "--GM_ORV2cYS-h38DSaCLw       1      1     1  \"Mm Mm Pizza\"          NaN   \n",
+       "--GM_ORV2cYS-h38DSaCLw       0      0     0  \"Mm Mm Pizza\"          NaN   \n",
+       "--GM_ORV2cYS-h38DSaCLw       0      0     0  \"Mm Mm Pizza\"          NaN   \n",
+       "--GM_ORV2cYS-h38DSaCLw       0      0     1  \"Mm Mm Pizza\"          NaN   \n",
+       "--GM_ORV2cYS-h38DSaCLw       1      0     0  \"Mm Mm Pizza\"          NaN   \n",
        "\n",
-       "                       neighborhood          address       city state  \\\n",
-       "business_id                                                             \n",
-       "-6e0liTvH5EoB4HuncuQgA          NaN  \"3415 Hwy 51 N\"  Fort Mill    SC   \n",
-       "-6e0liTvH5EoB4HuncuQgA          NaN  \"3415 Hwy 51 N\"  Fort Mill    SC   \n",
-       "-6e0liTvH5EoB4HuncuQgA          NaN  \"3415 Hwy 51 N\"  Fort Mill    SC   \n",
-       "-6e0liTvH5EoB4HuncuQgA          NaN  \"3415 Hwy 51 N\"  Fort Mill    SC   \n",
-       "-6e0liTvH5EoB4HuncuQgA          NaN  \"3415 Hwy 51 N\"  Fort Mill    SC   \n",
+       "                                    address        city state postal_code  \\\n",
+       "business_id                                                                 \n",
+       "--GM_ORV2cYS-h38DSaCLw  \"407 S Central Ave\"  Canonsburg    PA       15317   \n",
+       "--GM_ORV2cYS-h38DSaCLw  \"407 S Central Ave\"  Canonsburg    PA       15317   \n",
+       "--GM_ORV2cYS-h38DSaCLw  \"407 S Central Ave\"  Canonsburg    PA       15317   \n",
+       "--GM_ORV2cYS-h38DSaCLw  \"407 S Central Ave\"  Canonsburg    PA       15317   \n",
+       "--GM_ORV2cYS-h38DSaCLw  \"407 S Central Ave\"  Canonsburg    PA       15317   \n",
        "\n",
-       "                       postal_code   latitude  longitude  review_count  \\\n",
-       "business_id                                                              \n",
-       "-6e0liTvH5EoB4HuncuQgA       29715  35.086572 -80.931214           7.0   \n",
-       "-6e0liTvH5EoB4HuncuQgA       29715  35.086572 -80.931214           7.0   \n",
-       "-6e0liTvH5EoB4HuncuQgA       29715  35.086572 -80.931214           7.0   \n",
-       "-6e0liTvH5EoB4HuncuQgA       29715  35.086572 -80.931214           7.0   \n",
-       "-6e0liTvH5EoB4HuncuQgA       29715  35.086572 -80.931214           7.0   \n",
+       "                         latitude  longitude  review_count  is_open  \\\n",
+       "business_id                                                           \n",
+       "--GM_ORV2cYS-h38DSaCLw  40.252569 -80.183859           7.0      1.0   \n",
+       "--GM_ORV2cYS-h38DSaCLw  40.252569 -80.183859           7.0      1.0   \n",
+       "--GM_ORV2cYS-h38DSaCLw  40.252569 -80.183859           7.0      1.0   \n",
+       "--GM_ORV2cYS-h38DSaCLw  40.252569 -80.183859           7.0      1.0   \n",
+       "--GM_ORV2cYS-h38DSaCLw  40.252569 -80.183859           7.0      1.0   \n",
        "\n",
-       "                        is_open                                   categories  \\\n",
-       "business_id                                                                    \n",
-       "-6e0liTvH5EoB4HuncuQgA      1.0  Restaurants;Bars;Pubs;Sports Bars;Nightlife   \n",
-       "-6e0liTvH5EoB4HuncuQgA      1.0  Restaurants;Bars;Pubs;Sports Bars;Nightlife   \n",
-       "-6e0liTvH5EoB4HuncuQgA      1.0  Restaurants;Bars;Pubs;Sports Bars;Nightlife   \n",
-       "-6e0liTvH5EoB4HuncuQgA      1.0  Restaurants;Bars;Pubs;Sports Bars;Nightlife   \n",
-       "-6e0liTvH5EoB4HuncuQgA      1.0  Restaurants;Bars;Pubs;Sports Bars;Nightlife   \n",
-       "\n",
-       "                        avg_stars  \n",
-       "business_id                        \n",
-       "-6e0liTvH5EoB4HuncuQgA        4.0  \n",
-       "-6e0liTvH5EoB4HuncuQgA        4.0  \n",
-       "-6e0liTvH5EoB4HuncuQgA        4.0  \n",
-       "-6e0liTvH5EoB4HuncuQgA        4.0  \n",
-       "-6e0liTvH5EoB4HuncuQgA        4.0  "
+       "                                                   categories  avg_stars  \n",
+       "business_id                                                               \n",
+       "--GM_ORV2cYS-h38DSaCLw  Pizza;Chicken Wings;Salad;Restaurants        4.0  \n",
+       "--GM_ORV2cYS-h38DSaCLw  Pizza;Chicken Wings;Salad;Restaurants        4.0  \n",
+       "--GM_ORV2cYS-h38DSaCLw  Pizza;Chicken Wings;Salad;Restaurants        4.0  \n",
+       "--GM_ORV2cYS-h38DSaCLw  Pizza;Chicken Wings;Salad;Restaurants        4.0  \n",
+       "--GM_ORV2cYS-h38DSaCLw  Pizza;Chicken Wings;Salad;Restaurants        4.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "food_reviews_sc.head()"
+    "food_reviews_pa.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# food_reviews_sc.to_csv('food_reviews_sc', index=True)"
+    "# food_reviews_pa.to_csv('food_reviews_pa', index=True)"
    ]
   },
   {
@@ -1393,9 +1419,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
